# alcoa

./: README.md  pyproject.toml
alcoa/: simulateur.py  solution.py
